--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     deobfCompile "thaumcraft:Thaumcraft:1.12.2:6.1.BETA17"
 	}
 
-version = "1.6"
+version = "1.7"
 group = "net.thedudemc.pendantoflife" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "PendantOfLife"
 
@@ -60,10 +60,9 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.3.2655"
+    version = "1.12.2-14.23.5.2768"
     runDir = "run"
-    
-    mappings = "snapshot_20171003"
+    mappings = "stable_39"
 }
 
 
